--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "nodemon --exec ts-node app.ts",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.2.5",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -21,8 +21,17 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
+    "d3": "^4.9.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "path": "^0.12.7",
+    "primeng": "^4.0.3",
     "rxjs": "^5.1.0",
+    "ts-node": "^3.0.6",
+    "typescript": "^2.3.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
