--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "d3": "^4.9.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "morgan": "^1.8.2",
     "path": "^0.12.7",
     "primeng": "^4.0.3",
     "rxjs": "^5.1.0",
+    "serve-favicon": "^2.4.3",
     "ts-node": "^3.0.6",
     "typescript": "^2.3.4",
     "zone.js": "^0.8.4"
