--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3": "^4.9.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
     "primeng": "^4.0.3",
@@ -37,7 +38,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.1",
+    "@angular/cli": "1.2.0",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
