--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
     "d3": "^4.9.1",
@@ -32,6 +33,7 @@
     "morgan": "^1.8.2",
     "path": "^0.12.7",
     "primeng": "^4.0.3",
+    "request": "^2.81.0",
     "rxjs": "^5.1.0",
     "serve-favicon": "^2.4.3",
     "ts-node": "^3.0.6",
