--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "marked": "^0.3.6",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
     "primeng": "^4.0.3",
