--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,11 @@ before_script:
   - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
 #  install node js
   - apt-get --quiet install -y build-essential
-  - curl -sL http://deb.nodesource.com/setup_6.x | bash -
+  - curl -sL http://deb.nodesource.com/setup_7.x | bash -
   - apt-get --quiet install -y nodejs
   - apt-get --quiet update --yes
   - npm -v
-  - npm install -g angular-cli
+  - npm install -g @angular/cli
 stages:
   - test
   - deploy
