--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "request": "^2.81.0",
     "rxjs": "^5.1.0",
     "serve-favicon": "^2.4.3",
+    "tether": "^1.4.0",
     "ts-node": "^3.0.6",
     "typescript": "^2.3.4",
     "zone.js": "^0.8.4"
