--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-alpha.6",
     "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
