--- a/package.json
+++ b/package.json
@@ -6,42 +6,42 @@
     "ng": "ng",
     "start": "nodemon --exec ts-node app.ts",
     "start-client": "node_modules/@angular/cli/bin/ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "node_modules/@angular/cli/bin/ng build",
+    "test": "node_modules/@angular/cli/bin/ng test",
+    "lint": "node_modules/@angular/cli/bin/ng lint",
+    "e2e": "node_modules/@angular/cli/bin/ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.5",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^4.3.2",
+    "@angular/common": "^4.3.2",
+    "@angular/compiler": "^4.3.2",
+    "@angular/core": "^4.3.2",
+    "@angular/forms": "^4.3.2",
+    "@angular/http": "^4.3.2",
+    "@angular/platform-browser": "^4.3.2",
+    "@angular/platform-browser-dynamic": "^4.3.2",
+    "@angular/router": "^4.3.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-alpha.6",
     "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
-    "cors": "^2.8.3",
-    "d3": "^4.9.1",
+    "cors": "^2.8.4",
+    "d3": "^4.10.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
-    "primeng": "^4.0.3",
+    "primeng": "^4.1.2",
     "request": "^2.81.0",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.4.2",
     "serve-favicon": "^2.4.3",
     "tether": "^1.4.0",
-    "ts-node": "^3.0.6",
-    "typescript": "^2.3.4",
-    "zone.js": "^0.8.4"
+    "ts-node": "^3.3.0",
+    "typescript": "^2.4.2",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
     "@angular/cli": "1.2.0",
