--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
+    "ng": "node_modules/@angular/cli/bin/ng",
     "start": "nodemon --exec ts-node app.ts",
     "start-client": "node_modules/@angular/cli/bin/ng serve",
     "build": "node_modules/@angular/cli/bin/ng build",
     "test": "node_modules/@angular/cli/bin/ng test",
     "lint": "node_modules/@angular/cli/bin/ng lint",
-    "e2e": "node_modules/@angular/cli/bin/ng e2e"
+    "e2e": "node_modules/@angular/cli/bin/ng e2e",
+    "bot": "ts-node bot.ts"
   },
   "private": true,
   "dependencies": {
@@ -22,12 +23,14 @@
     "@angular/platform-browser": "^4.3.2",
     "@angular/platform-browser-dynamic": "^4.3.2",
     "@angular/router": "^4.3.2",
+    "@angular/testing": "0.0.0-0",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-alpha.6",
     "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "d3": "^4.10.0",
+    "discord.js": "^11.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
@@ -55,10 +58,10 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.2",
-    "tslint": "~5.3.2"
+    "tslint": "^5.3.2"
   }
 }
