--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@angular/platform-browser-dynamic": "^4.3.2",
     "@angular/router": "^4.3.2",
     "@angular/testing": "0.0.0-0",
-    "contracts": "file:./contracts",
     "body-parser": "^1.17.2",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "4.0.0-beta.2",
     "code-point-at": "^1.1.0",
+    "contracts": "file:./contracts",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "d3": "^4.10.0",
@@ -38,6 +38,7 @@
     "marked": "^0.3.6",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
+    "popper.js": "^1.12.9",
     "primeng": "^4.1.2",
     "request": "^2.81.0",
     "rxjs": "^5.4.2",
