--- a/package.json
+++ b/package.json
@@ -6,62 +6,61 @@
     "ng": "node_modules/@angular/cli/bin/ng",
     "start": "nodemon --exec ts-node app.ts",
     "build": "node_modules/@angular/cli/bin/ng build",
-    "build-prod": "node_modules/@angular/cli/bin/ng build --env=prod",
+    "build-prod": "node_modules/@angular/cli/bin/ng build --prod",
     "test": "node_modules/@angular/cli/bin/ng test",
     "lint": "node_modules/@angular/cli/bin/ng lint",
     "e2e": "node_modules/@angular/cli/bin/ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.2",
-    "@angular/common": "^4.3.2",
-    "@angular/compiler": "^4.3.2",
-    "@angular/core": "^4.3.2",
-    "@angular/forms": "^4.3.2",
-    "@angular/http": "^4.3.2",
-    "@angular/platform-browser": "^4.3.2",
-    "@angular/platform-browser-dynamic": "^4.3.2",
-    "@angular/router": "^4.3.2",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
     "@angular/testing": "0.0.0-0",
-    "body-parser": "^1.17.2",
-    "bootstrap": "4.0.0-beta.2",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-beta.2",
     "code-point-at": "^1.1.0",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "cors": "^2.8.4",
-    "d3": "^4.10.0",
-    "discord.js": "^11.1.0",
+    "d3": "^4.12.2",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
-    "marked": "^0.3.6",
-    "morgan": "^1.8.2",
+    "marked": "^0.3.12",
+    "morgan": "^1.9.0",
     "path": "^0.12.7",
-    "popper.js": "^1.12.9",
-    "primeng": "^4.1.2",
-    "request": "^2.81.0",
-    "rxjs": "^5.4.2",
-    "serve-favicon": "^2.4.3",
-    "tether": "^1.4.0",
+    "popper.js": "^1.13.0",
+    "primeng": "^4.3.0",
+    "request": "^2.83.0",
+    "rxjs": "^5.5.6",
+    "serve-favicon": "^2.4.5",
+    "tether": "^1.4.3",
     "ts-node": "^3.3.0",
-    "typescript": "^2.4.2",
-    "zone.js": "^0.8.16"
+    "typescript": "^2.3.4",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
+    "@angular/cli": "^1.6.5",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/language-service": "^4.4.6",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.96",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^1.7.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.0",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "tslint": "^5.3.2"
+    "tslint": "^5.9.1"
   }
 }
