--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
     "@angular/testing": "0.0.0-0",
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-brands": "^5.0.6",
+    "@fortawesome/fontawesome-pro-light": "^5.0.6",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "code-point-at": "^1.1.0",
